Adding a procfile, gonna be handy when I deploy to Heroku

--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server --watch src/jobs.json --port 5000"
+    "server": "json-server --watch src/jobs.json --port 5000",
+    "start": "serve -s dist",
+    "start:both": "concurrently \"npm run start\" \"npm run server\""
   },
   "dependencies": {
+    "concurrently": "^9.0.1",
     "json-server": "^1.0.0-beta.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
